# ai-toolkit

./: .cspell.json  .editorconfig  .gitignore  .gitleaks.toml  .mega-linter.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  dependency-review.yml  pr-title.yml
projects/failsage/: .env.example  Makefile  README.md  docker-compose.yml
projects/failsage/backend/: Dockerfile  pyproject.toml
projects/failsage/backend/alembic/: env.py
projects/failsage/backend/alembic/versions/: 001_initial_schema.py
projects/failsage/backend/app/: main.py
projects/failsage/backend/app/api/routes/: failures.py  feedback.py  jenkins.py  runs.py  tests.py
projects/failsage/backend/app/core/: celery_app.py  config.py  database.py
projects/failsage/backend/app/models/db/: base.py  feedback.py  flaky.py  run.py  test_case.py
projects/failsage/backend/app/models/schemas/: analysis.py  jenkins.py
projects/failsage/backend/app/services/: ai_service.py  clustering.py  flaky_detector.py  junit_parser.py  notification.py
projects/failsage/backend/app/tasks/: analysis.py
projects/failsage/frontend/: index.html  nginx.conf  package.json  tailwind.config.js
projects/failsage/frontend/src/: App.tsx  index.css  main.tsx
projects/failsage/frontend/src/api/: client.ts
projects/failsage/frontend/src/components/: AIPanel.tsx  BuildOverview.tsx  ConfidenceIndicator.tsx  DateRangePicker.tsx  FailureList.tsx  FlakyTracker.tsx  RegressionInsights.tsx  SeverityBadge.tsx  StackTraceViewer.tsx  ThemeToggle.tsx
projects/failsage/frontend/src/hooks/: useTheme.ts
projects/failsage/frontend/src/pages/: Dashboard.tsx  RunDetail.tsx
projects/failsage/k8s/: backend.yaml  configmap.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.yaml  worker.yaml
projects/failsage/tests/: sample_junit.xml  simulate_jenkins.py  test_parser.py
